fixed word wrap for messages

--- a/src/components/pages/dashboard/chat/incomingChat.css
+++ b/src/components/pages/dashboard/chat/incomingChat.css
@@ -8,7 +8,7 @@
     border: 1px solid #BEDFE6;
     margin: 10px 0 0 0;
     max-width: 50%;
-    word-break: break-all;
+    
 }
 
 @media screen and (max-width:800px){
