--- a/src/components/pages/dashboard/chat/outgoingChat.css
+++ b/src/components/pages/dashboard/chat/outgoingChat.css
@@ -4,7 +4,7 @@
   border-radius: 10px 0px 10px 10px;
   margin: 10px 0 0 0;
   max-width: 50%;
-  word-break: break-all;
+  
 }
 
 
